--- a/scripts/install
+++ b/scripts/install
@@ -28,16 +28,12 @@ mkdir -p "$install_dir/templates"
 # COPY APPLICATION FILES
 #=================================================
 
-# Find the extracted repo directory
-app_src=$(find "$YNH_APP_BASEDIR" -maxdepth 2 -name "manifest.toml" -type f -exec dirname {} \; | head -1)
+# Find app.py - it's in a subdirectory like academic_library_ynh-main/
+app_src=$(find "$YNH_APP_BASEDIR" -name "app.py" -type f | head -1 | xargs dirname)
 
 if [ -z "$app_src" ] || [ ! -f "$app_src/app.py" ]; then
-    ynh_die --message="Could not find app source files in $YNH_APP_BASEDIR"
+    ynh_die --message="Could not find app.py in $YNH_APP_BASEDIR"
 fi
-
-cp "$app_src/app.py" "$install_dir/"
-cp "$app_src/requirements.txt" "$install_dir/"
-cp -r "$app_src/templates"/* "$install_dir/templates/"
 
 #=================================================
 # SET PERMISSIONS
