--- a/scripts/install
+++ b/scripts/install
@@ -28,12 +28,9 @@ mkdir -p "$install_dir/templates"
 # COPY APPLICATION FILES
 #=================================================
 
-# Find app.py - it's in a subdirectory like academic_library_ynh-main/
-app_src=$(find "$YNH_APP_BASEDIR" -name "app.py" -type f | head -1 | xargs dirname)
-
-if [ -z "$app_src" ] || [ ! -f "$app_src/app.py" ]; then
-    ynh_die --message="Could not find app.py in $YNH_APP_BASEDIR"
-fi
+# Find app.py directly without xargs
+app_py_path=$(find "$YNH_APP_BASEDIR" -name "app.py" -type f | head -1)
+app_src=$(dirname "$app_py_path")
 
 #=================================================
 # SET PERMISSIONS
