--- a/scripts/install
+++ b/scripts/install
@@ -32,6 +32,9 @@ mkdir -p "$install_dir/templates"
 app_py_path=$(find "$YNH_APP_BASEDIR" -name "app.py" -type f | head -1)
 app_src=$(dirname "$app_py_path")
 
+# Copy all files from the source directory to the install directory
+cp -r "$app_src/." "$install_dir/"
+
 #=================================================
 # SET PERMISSIONS
 #=================================================
