--- a/scripts/install
+++ b/scripts/install
@@ -28,11 +28,11 @@ mkdir -p "$install_dir/templates"
 # COPY APPLICATION FILES
 #=================================================
 
-# Find app.py directly without xargs
-app_py_path=$(find "$YNH_APP_BASEDIR" -name "app.py" -type f | head -1)
+# Find app.py in the source/ subdirectory
+app_py_path=$(find "$YNH_APP_BASEDIR" -path "*/source/app.py" -type f | head -1)
 app_src=$(dirname "$app_py_path")
 
-# Copy all files from the source directory to the install directory
+# Copy all files from the source/ directory to the install directory
 cp -r "$app_src/." "$install_dir/"
 
 #=================================================
